- add add_association_columns method to config.columns, so columns from has_one or belongs_to association can be added as delegated columns (for list, show, field_search and update_column only)
- support has_many through singular associations (belongs_to or has_one) in forms
- fix select of existing record for nested subform
- fix apply constraints to parent (fix update columns on subform on embedded scaffold)
- fix for override form field and subform partials on AS controllers which are parent class for AS controllers, so they are shared by children classes
- fix translation for ActiveRecord enums
- fix do_refresh_list on actions with GET route, it used :id and :action from request for sorting and pagination links
- fix enabling draggable lists and sliders on new subform records
- fix updating column and changing from :hidden form_ui to different one
- fix searching with :multi_chosen search_ui
- fix human conditions for :chosen and :multi_chosen search_ui
- fix display of association in list when association_limit is nil
- fix conversion of i18n date and datetime value, some abbr day and month may be equal in some languages
- fix hidden form_ui for collection associations (has_many, habtm)

= 3.4.42
- Fix for protected and private authorized methods

= 3.4.41.1
- Fix issue with id_helpers and active_scaffold_sortable, caused by last security fix

= 3.4.41
- Fix XSS via eid param

= 3.4.40
- allow to exclude bitfield column
- replace some uses of $ with jQuery

= 3.4.39
- fix removing delete link with config.delete.link = false, broken on 3.4.38
- fix position of nested action groups
- fix human conditions with rails 4.2 and json session
- fix search conditions for decimal columns on rails 4.2

= 3.4.38
- ensure add_existing and delete_existing are removed when list is not nested