@@ -20,8 +20,7 @@
    form_id = element_form_id(:action => form_action, :id => @record.try(:id))
 %>
 <%=
-options = {:onsubmit => onsubmit,
-           :id => form_id,
+options = {:id => form_id,
            :multipart => multipart,
            :class => "as_form #{form_action.to_s}",
            :method => method,
