@@ -534,8 +534,6 @@ module ActiveScaffold
         select_tag(options[:name], options_for_select(select_options, record.send(column.name)), options)
       end
 
-      def onsubmit; end
-
       ##
       ## Form column override signatures
       ##
