@@ -17,6 +17,7 @@
 - stop saving embedded scaffolds info into session, so no more CookieOverflow errors caused by loading many embedded scaffolds
 - add add_association_columns method to config.columns, so columns from has_one or belongs_to association can be added as delegated columns (for list, show, field_search and update_column only)
 - support has_many through singular associations (belongs_to or has_one) in forms
+- remove onsubmit tag in forms and move tinymce related JS to assets
 - fix select of existing record for nested subform
 - fix apply constraints to parent (fix update columns on subform on embedded scaffold)
 - fix for override form field and subform partials on AS controllers which are parent class for AS controllers, so they are shared by children classes
